--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -310,6 +310,7 @@
         &-wrapper
             grid-template-columns: 1fr
             grid-row-gap: 30px
+            grid-column-gap: 0
         &__logo
             grid-row: 1
             grid-column: 1
